update for rest api changes

--- a/RestAPIs/bin/RestAPIs.dll.config
+++ b/RestAPIs/bin/RestAPIs.dll.config
@@ -11,9 +11,9 @@
   <connectionStrings>
     <!--<add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;AttachDbFilename=|DataDirectory|\aspnet-RestAPIs-20150520110537.mdf;Initial Catalog=aspnet-RestAPIs-20150520110537;Integrated Security=True"
       providerName="System.Data.SqlClient" />-->
-    <add name="DefaultConnection" connectionString="Data Source=Naveed\MSSQL2014;Initial Catalog=SwiftKareDB;Integrated Security=SSPI" providerName="System.Data.SqlClient" />
-    <add name="ConnectionString" connectionString="Data Source=Naveed\MSSQL2014;Initial Catalog=SwiftKareDB;User Id=sa;Password=saadmin;persist security info=False;" providerName="System.Data.SqlClient" />
-    <add name="SwiftKareDBEntities" connectionString="metadata=res://*/SwiftKareDBModel.csdl|res://*/SwiftKareDBModel.ssdl|res://*/SwiftKareDBModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=Naveed\MSSQL2014;initial catalog=SwiftKareDB;user id=sa;password=saadmin;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="DefaultConnection" connectionString="Data Source=SHUJAATGUL-PC\MSSQLSERVER_2014;Initial Catalog=SwiftKareDB;Integrated Security=SSPI" providerName="System.Data.SqlClient" />
+    <add name="ConnectionString" connectionString="Data Source=SHUJAATGUL-PC\MSSQLSERVER_2014;Initial Catalog=SwiftKareDB;User Id=sa;Password=@dmin123;persist security info=False;" providerName="System.Data.SqlClient" />
+    <add name="SwiftKareDBEntities" connectionString="metadata=res://*/SwiftKareDBModel.csdl|res://*/SwiftKareDBModel.ssdl|res://*/SwiftKareDBModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=shujaatgul-pc\mssqlserver_2014;initial catalog=SwiftKareDB;user id=sa;password=@dmin123;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <appSettings>
     <add key="owin:AutomaticAppStartup" value="true" />
