--- a/WebApp/Web.config
+++ b/WebApp/Web.config
@@ -10,8 +10,8 @@
     
   <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 --><!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 --><!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 --></configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=Naveed\MSSQL2014;Initial Catalog=SwiftKareDB;Integrated Security=SSPI" providerName="System.Data.SqlClient" />
-    <add name="SwiftKareDBEntities" connectionString="metadata=res://*/SwiftKareDBModel.csdl|res://*/SwiftKareDBModel.ssdl|res://*/SwiftKareDBModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=Naveed\MSSQL2014;initial catalog=SwiftKareDB;user id=sa;password=saadmin;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="DefaultConnection" connectionString="Data Source=shujaatgul-pc\mssqlserver_2014;Initial Catalog=SwiftKareDB;Integrated Security=SSPI" providerName="System.Data.SqlClient" />
+    <add name="SwiftKareDBEntities" connectionString="metadata=res://*/SwiftKareDBModel.csdl|res://*/SwiftKareDBModel.ssdl|res://*/SwiftKareDBModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=shujaatgul-pc\mssqlserver_2014;initial catalog=SwiftKareDB;user id=sa;password=@dmin123;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
