--- a/DataAccess/App.Config
+++ b/DataAccess/App.Config
@@ -19,6 +19,6 @@
   </startup>
   <connectionStrings>
     <!--<add name="SwiftKareDBEntities" connectionString="metadata=res://*/SwiftKareDBModel.csdl|res://*/SwiftKareDBModel.ssdl|res://*/SwiftKareDBModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=Naveed\MSSQL2014;initial catalog=SwiftKareDB;user id=sa;password=saadmin;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />-->
-  <add name="SwiftKareDBEntities" connectionString="metadata=res://*/SwiftKareDBModel.csdl|res://*/SwiftKareDBModel.ssdl|res://*/SwiftKareDBModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=localhost;initial catalog=SwiftKareDB;persist security info=True;user id=sa;password=Abc@123;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="SwiftKareDBEntities" connectionString="metadata=res://*/SwiftKareDBModel.csdl|res://*/SwiftKareDBModel.ssdl|res://*/SwiftKareDBModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=13.91.42.71;initial catalog=SwiftKareDB;user id=sa;password=Abc@123;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
 </configuration>
