Added pharmacy search

--- a/RestAPIs/Web.config
+++ b/RestAPIs/Web.config
@@ -46,6 +46,9 @@
     <add key="SendGridFromEmailAddress" value="support@swiftkare.com" />
     <add key="SendGridFromName" value="Swift Kare" />
 
+    <add key="RescheduleLimit" value="24"/>
+    <add key="AlertPartBeforeDateTime" value="Appointment on "/>
+    <add key="AlertPartBeforeNewDateTime" value="is rescheduled by patient to "/>
   </appSettings>
   <!--
     For a description of web.config changes see http://go.microsoft.com/fwlink/?LinkId=235367.
