--- a/WebApp/Web.config
+++ b/WebApp/Web.config
@@ -23,6 +23,11 @@
 
   </connectionStrings>
   <appSettings>
+    <!--<add key="ApiBaseUrl" value="http://13.91.42.71:8079/" />-->
+    <add key="ApiBaseUrl" value="http://localhost:8079/" />
+    <!-- <add key="ApiBaseUrl" value="http://localhost:13040/" />-->
+    <add key="ClientId" value="abc" />
+    <add key="Secret" value="ddddddddd" />
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
