--- a/WebApp/WebApp.csproj
+++ b/WebApp/WebApp.csproj
@@ -328,13 +328,19 @@
     <Content Include="Content\fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Content\images\american-express.png" />
     <Content Include="Content\images\appoi.png" />
+    <Content Include="Content\images\appointments.png" />
     <Content Include="Content\images\bg.jpg" />
     <Content Include="Content\images\calendar.png" />
     <Content Include="Content\images\call-history.png" />
     <Content Include="Content\images\chat.png" />
     <Content Include="Content\images\cropper.jpg" />
     <Content Include="Content\images\doctor.png" />
+    <Content Include="Content\images\full_screen.png" />
+    <Content Include="Content\images\green%402x.png" />
+    <Content Include="Content\images\green%402x1.png" />
     <Content Include="Content\images\green.png" />
+    <Content Include="Content\images\half_screen.png" />
+    <Content Include="Content\images\history.png" />
     <Content Include="Content\images\icon_appointment.png" />
     <Content Include="Content\images\icon_appointment.svg" />
     <Content Include="Content\images\icon_call-history.png" />
@@ -349,15 +355,24 @@
     <Content Include="Content\images\icon_scheduler.svg" />
     <Content Include="Content\images\img.jpg" />
     <Content Include="Content\images\inbox.png" />
+    <Content Include="Content\images\list.png" />
     <Content Include="Content\images\loaderImage.gif" />
     <Content Include="Content\images\Logo-heart.png" />
     <Content Include="Content\images\Logos.png" />
     <Content Include="Content\images\mastercard.png" />
     <Content Include="Content\images\media.jpg" />
+    <Content Include="Content\images\mic.png" />
+    <Content Include="Content\images\mic_h.png" />
+    <Content Include="Content\images\my-doctors1.png" />
+    <Content Include="Content\images\my-files.png" />
+    <Content Include="Content\images\my-health.png" />
+    <Content Include="Content\images\my_video.jpg" />
     <Content Include="Content\images\noun_516749_cc.svg" />
     <Content Include="Content\images\patient.png" />
     <Content Include="Content\images\patient1.png" />
     <Content Include="Content\images\paypal.png" />
+    <Content Include="Content\images\phone.png" />
+    <Content Include="Content\images\phone_h.png" />
     <Content Include="Content\images\picture.jpg" />
     <Content Include="Content\images\placeholder.png" />
     <Content Include="Content\images\prod-1.jpg" />
@@ -365,9 +380,15 @@
     <Content Include="Content\images\prod-3.jpg" />
     <Content Include="Content\images\prod-4.jpg" />
     <Content Include="Content\images\prod-5.jpg" />
+    <Content Include="Content\images\sound.png" />
+    <Content Include="Content\images\sound_h.png" />
     <Content Include="Content\images\user.png" />
     <Content Include="Content\images\us_map.jpg" />
+    <Content Include="Content\images\video-chat.jpg" />
+    <Content Include="Content\images\video.png" />
+    <Content Include="Content\images\video_h.png" />
     <Content Include="Content\images\visa.png" />
+    <Content Include="Content\images\whats-new.png" />
     <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
