images folder added inside css folder

--- a/WebApp/WebApp.csproj
+++ b/WebApp/WebApp.csproj
@@ -312,7 +312,71 @@
     <Content Include="Content\css\fixedHeader.bootstrap.min.css" />
     <Content Include="Content\css\font-awesome.min.css" />
     <Content Include="Content\css\green.css" />
+    <Content Include="Content\css\images\american-express.png" />
+    <Content Include="Content\css\images\appoi.png" />
+    <Content Include="Content\css\images\appointments.png" />
+    <Content Include="Content\css\images\bg.jpg" />
+    <Content Include="Content\css\images\calendar.png" />
+    <Content Include="Content\css\images\call-history.png" />
+    <Content Include="Content\css\images\chat.png" />
+    <Content Include="Content\css\images\cropper.jpg" />
+    <Content Include="Content\css\images\doctor.png" />
+    <Content Include="Content\css\images\full_screen.png" />
+    <Content Include="Content\css\images\green%402x.png" />
+    <Content Include="Content\css\images\green%402x1.png" />
+    <Content Include="Content\css\images\green.png" />
+    <Content Include="Content\css\images\half_screen.png" />
+    <Content Include="Content\css\images\history.png" />
+    <Content Include="Content\css\images\icon_appointment.png" />
+    <Content Include="Content\css\images\icon_appointment.svg" />
+    <Content Include="Content\css\images\icon_call-history.png" />
+    <Content Include="Content\css\images\icon_call-history.svg" />
+    <Content Include="Content\css\images\icon_doc_search.png" />
+    <Content Include="Content\css\images\icon_doc_search.svg" />
+    <Content Include="Content\css\images\icon_messages.png" />
+    <Content Include="Content\css\images\icon_messages.svg" />
+    <Content Include="Content\css\images\icon_patient_search.png" />
+    <Content Include="Content\css\images\icon_patient_search.svg" />
+    <Content Include="Content\css\images\icon_scheduler.png" />
+    <Content Include="Content\css\images\icon_scheduler.svg" />
+    <Content Include="Content\css\images\img.jpg" />
+    <Content Include="Content\css\images\inbox.png" />
+    <Content Include="Content\css\images\list.png" />
+    <Content Include="Content\css\images\loaderImage.gif" />
+    <Content Include="Content\css\images\Logo-heart.png" />
+    <Content Include="Content\css\images\Logos.png" />
+    <Content Include="Content\css\images\mastercard.png" />
+    <Content Include="Content\css\images\media.jpg" />
+    <Content Include="Content\css\images\mic.png" />
+    <Content Include="Content\css\images\mic_h.png" />
+    <Content Include="Content\css\images\my-doctors1.png" />
+    <Content Include="Content\css\images\my-files.png" />
+    <Content Include="Content\css\images\my-health.png" />
+    <Content Include="Content\css\images\my_video.jpg" />
+    <Content Include="Content\css\images\noun_516749_cc.svg" />
+    <Content Include="Content\css\images\patient.png" />
+    <Content Include="Content\css\images\patient1.png" />
+    <Content Include="Content\css\images\paypal.png" />
+    <Content Include="Content\css\images\phone.png" />
+    <Content Include="Content\css\images\phone_h.png" />
+    <Content Include="Content\css\images\picture.jpg" />
+    <Content Include="Content\css\images\placeholder.png" />
+    <Content Include="Content\css\images\prod-1.jpg" />
+    <Content Include="Content\css\images\prod-2.jpg" />
+    <Content Include="Content\css\images\prod-3.jpg" />
+    <Content Include="Content\css\images\prod-4.jpg" />
+    <Content Include="Content\css\images\prod-5.jpg" />
+    <Content Include="Content\css\images\sound.png" />
+    <Content Include="Content\css\images\sound_h.png" />
+    <Content Include="Content\css\images\user.png" />
+    <Content Include="Content\css\images\us_map.jpg" />
+    <Content Include="Content\css\images\video-chat.jpg" />
+    <Content Include="Content\css\images\video.png" />
+    <Content Include="Content\css\images\video_h.png" />
+    <Content Include="Content\css\images\visa.png" />
+    <Content Include="Content\css\images\whats-new.png" />
     <Content Include="Content\css\jqvmap.min.css" />
+    <Content Include="Content\css\main.css" />
     <Content Include="Content\css\maps\jquery-jvectormap-2.0.3.css" />
     <Content Include="Content\css\nprogress.css" />
     <Content Include="Content\css\pnotify.css" />
@@ -323,6 +387,7 @@
     <Content Include="Content\css\starrr.css" />
     <Content Include="Content\css\style.css" />
     <Content Include="Content\css\style1.css" />
+    <Content Include="Content\css\style_tokbox.css" />
     <Content Include="Content\css\switchery.min.css" />
     <Content Include="Content\fonts\fontawesome-webfont.svg" />
     <Content Include="Content\fonts\glyphicons-halflings-regular.svg" />
