--- a/RestAPIs/Web.config
+++ b/RestAPIs/Web.config
@@ -9,17 +9,14 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <!--<add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;AttachDbFilename=|DataDirectory|\aspnet-RestAPIs-20150520110537.mdf;Initial Catalog=aspnet-RestAPIs-20150520110537;Integrated Security=True"
-      providerName="System.Data.SqlClient" />
-    <add name="DefaultConnection" connectionString="Data Source=104.42.185.181;Initial Catalog=SwiftKareDB;Integrated Security=SSPI" providerName="System.Data.SqlClient" />-->
-    <!--<add name="DefaultConnection" connectionString="Data Source=104.42.185.181;Initial Catalog=SwiftKareDB;User Id=sa;Password=123456;persist security info=False;" providerName="System.Data.SqlClient" />
-    <add name="ConnectionString" connectionString="Data Source=104.42.185.181;Initial Catalog=SwiftKareDB;User Id=sa;Password=123456;persist security info=False;" providerName="System.Data.SqlClient" />
-    <add name="SwiftKareDBEntities" connectionString="metadata=res://*/SwiftKareDBModel.csdl|res://*/SwiftKareDBModel.ssdl|res://*/SwiftKareDBModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=104.42.185.181;initial catalog=SwiftKareDB;user id=sa;password=123456;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />-->
+    <add name="DefaultConnection" connectionString="Data Source=NAVEED\MSSQLSERVER2016;Initial Catalog=SwiftKareDB;User Id=sa;Password=saadmin;persist security info=False;" providerName="System.Data.SqlClient" />
+    <add name="ConnectionString" connectionString="Data Source=NAVEED\MSSQLSERVER2016;Initial Catalog=SwiftKareDB;User Id=sa;Password=saadmin;persist security info=False;" providerName="System.Data.SqlClient" />
+    <add name="SwiftKareDBEntities" connectionString="metadata=res://*/SwiftKareDBModel.csdl|res://*/SwiftKareDBModel.ssdl|res://*/SwiftKareDBModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=NAVEED\MSSQLSERVER2016;initial catalog=SwiftKareDB;user id=sa;password=saadmin;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
 
 
-    <add name="DefaultConnection" connectionString="Data Source=13.91.42.71;Initial Catalog=SwiftKareDB;User Id=sa;Password=Abc@123;persist security info=False;" providerName="System.Data.SqlClient" />
+    <!--<add name="DefaultConnection" connectionString="Data Source=13.91.42.71;Initial Catalog=SwiftKareDB;User Id=sa;Password=Abc@123;persist security info=False;" providerName="System.Data.SqlClient" />
     <add name="ConnectionString" connectionString="Data Source=13.91.42.71;Initial Catalog=SwiftKareDB;User Id=sa;Password=Abc@123;persist security info=False;" providerName="System.Data.SqlClient" />
-    <add name="SwiftKareDBEntities" connectionString="metadata=res://*/SwiftKareDBModel.csdl|res://*/SwiftKareDBModel.ssdl|res://*/SwiftKareDBModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=13.91.42.71;initial catalog=SwiftKareDB;user id=sa;password=Abc@123;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="SwiftKareDBEntities" connectionString="metadata=res://*/SwiftKareDBModel.csdl|res://*/SwiftKareDBModel.ssdl|res://*/SwiftKareDBModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=13.91.42.71;initial catalog=SwiftKareDB;user id=sa;password=Abc@123;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />-->
 
   </connectionStrings>
   <appSettings>
@@ -28,7 +25,7 @@
     <add key="ApplyIPsAuthorizationFilter" value="false" />
     <add key="IsApiHelpEnabled" value="true" />
     <!--<add key="ConnectionString" value="Data Source=104.42.185.181;Initial Catalog=SwiftKareDB;User Id=sa;Password=123456;persist security info=False;" />-->
-    <add key="ConnectionString" value="Data Source=13.91.42.71;Initial Catalog=SwiftKareDB;User Id=sa;Password=Abc@123;persist security info=False;" />
+    <add key="ConnectionString" value="Data Source=NAVEED\MSSQLSERVER2016;Initial Catalog=SwiftKareDB;User Id=sa;Password=saadmin;persist security info=False;" />
     <add key="OauthUserName" value="abc" />
     <add key="OauthPassword" value="ddddddddd" />
     <add key="OauthClientId" value="abc" />
@@ -46,9 +43,9 @@
     <add key="SendGridFromEmailAddress" value="support@swiftkare.com" />
     <add key="SendGridFromName" value="Swift Kare" />
 
-    <add key="RescheduleLimit" value="24"/>
-    <add key="AlertPartBeforeDateTime" value="Appointment on "/>
-    <add key="AlertPartBeforeNewDateTime" value="is rescheduled by patient to "/>
+    <add key="RescheduleLimit" value="24" />
+    <add key="AlertPartBeforeDateTime" value="Appointment on " />
+    <add key="AlertPartBeforeNewDateTime" value="is rescheduled by patient to " />
   </appSettings>
   <!--
     For a description of web.config changes see http://go.microsoft.com/fwlink/?LinkId=235367.
@@ -79,11 +76,11 @@
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
         <assemblyIdentity name="Microsoft.Owin" publicKeyToken="31bf3856ad364e35" />
-        <bindingRedirect oldVersion="0.0.0.0-3.0.0.0" newVersion="3.0.0.0" />
+        <bindingRedirect oldVersion="0.0.0.0-3.0.1.0" newVersion="3.0.1.0" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="Microsoft.Owin.Security.OAuth" publicKeyToken="31bf3856ad364e35" />
-        <bindingRedirect oldVersion="0.0.0.0-3.0.0.0" newVersion="3.0.0.0" />
+        <bindingRedirect oldVersion="0.0.0.0-3.0.1.0" newVersion="3.0.1.0" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="Microsoft.Owin.Security.Cookies" publicKeyToken="31bf3856ad364e35" />
@@ -91,7 +88,7 @@
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="Microsoft.Owin.Security" publicKeyToken="31bf3856ad364e35" />
-        <bindingRedirect oldVersion="0.0.0.0-3.0.0.0" newVersion="3.0.0.0" />
+        <bindingRedirect oldVersion="0.0.0.0-3.0.1.0" newVersion="3.0.1.0" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="Newtonsoft.Json" culture="neutral" publicKeyToken="30ad4fe6b2a6aeed" />
@@ -146,12 +143,8 @@
       </customBinding>
     </bindings>
     <client>
-      <endpoint address="http://my.staging.dosespot.com/api/11/api.asmx"
-        binding="basicHttpBinding" bindingConfiguration="APISoap" contract="DoseSpotApi.APISoap"
-        name="APISoap" />
-      <endpoint address="http://my.staging.dosespot.com/api/11/api.asmx"
-        binding="customBinding" bindingConfiguration="APISoap12" contract="DoseSpotApi.APISoap"
-        name="APISoap12" />
+      <endpoint address="http://my.staging.dosespot.com/api/11/api.asmx" binding="basicHttpBinding" bindingConfiguration="APISoap" contract="DoseSpotApi.APISoap" name="APISoap" />
+      <endpoint address="http://my.staging.dosespot.com/api/11/api.asmx" binding="customBinding" bindingConfiguration="APISoap12" contract="DoseSpotApi.APISoap" name="APISoap12" />
     </client>
   </system.serviceModel>
 </configuration>
