view doctor profile from see doctor module

--- a/WebApp/WebApp.csproj
+++ b/WebApp/WebApp.csproj
@@ -723,6 +723,8 @@
     <Content Include="Views\SeeDoctor\SearchPharmacyView.cshtml" />
     <Content Include="Views\SeeDoctor\PartialViewSurgery.cshtml" />
     <Content Include="Views\HelpTicket\Index.cshtml" />
+    <Content Include="Views\SeeDoctor\DoctorProfileView.cshtml" />
+    <Content Include="Views\DoctorAppointment\PatientProfileView.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
