signalR issue after merged resolved

--- a/RestAPIs/Web.config
+++ b/RestAPIs/Web.config
@@ -24,8 +24,8 @@
     <add key="ApplyHttpsFilter" value="false" />
     <add key="ApplyIPsAuthorizationFilter" value="false" />
     <add key="IsApiHelpEnabled" value="true" />
-    <!--<add key="ConnectionString" value="Data Source=104.42.185.181;Initial Catalog=SwiftKareDB;User Id=sa;Password=123456;persist security info=False;" />-->
-    <add key="ConnectionString" value="Data Source=NAVEED\MSSQLSERVER2016;Initial Catalog=SwiftKareDB;User Id=sa;Password=saadmin;persist security info=False;" />
+    <add key="ConnectionString" value="Data Source=13.91.42.71;Initial Catalog=SwiftKareDB;User Id=sa;Password=123456;persist security info=False;" />
+    <!--<add key="ConnectionString" value="Data Source=NAVEED\MSSQLSERVER2016;Initial Catalog=SwiftKareDB;User Id=sa;Password=saadmin;persist security info=False;" />-->
     <add key="OauthUserName" value="abc" />
     <add key="OauthPassword" value="ddddddddd" />
     <add key="OauthClientId" value="abc" />
