Live call and schedule call testing issues

--- a/WebApp/Web.config
+++ b/WebApp/Web.config
@@ -15,11 +15,11 @@
   </configSections>
   <connectionStrings>
 
-    <add name="DefaultConnection" connectionString="Data Source=NAVEED\MSSQLSERVER2016;Initial Catalog=SwiftKareDB;User Id=sa;Password=saadmin;persist security info=False;" providerName="System.Data.SqlClient" />
-    <add name="SwiftKareDBEntities" connectionString="metadata=res://*/SwiftKareDBModel.csdl|res://*/SwiftKareDBModel.ssdl|res://*/SwiftKareDBModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;Data Source=NAVEED\MSSQLSERVER2016;Initial Catalog=SwiftKareDB;User Id=sa;Password=saadmin;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+   <!-- <add name="DefaultConnection" connectionString="Data Source=NAVEED\MSSQLSERVER2016;Initial Catalog=SwiftKareDB;User Id=sa;Password=saadmin;persist security info=False;" providerName="System.Data.SqlClient" />
+    <add name="SwiftKareDBEntities" connectionString="metadata=res://*/SwiftKareDBModel.csdl|res://*/SwiftKareDBModel.ssdl|res://*/SwiftKareDBModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;Data Source=NAVEED\MSSQLSERVER2016;Initial Catalog=SwiftKareDB;User Id=sa;Password=saadmin;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />-->
     
-    <!--<add name="DefaultConnection" connectionString="Data Source=13.91.42.71;Initial Catalog=SwiftKareDB;User Id=sa;Password=Abc@123;persist security info=False;" providerName="System.Data.SqlClient" />
-    <add name="SwiftKareDBEntities" connectionString="metadata=res://*/SwiftKareDBModel.csdl|res://*/SwiftKareDBModel.ssdl|res://*/SwiftKareDBModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;Data Source=13.91.42.71;Initial Catalog=SwiftKareDB;User Id=sa;Password=Abc@123;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />-->
+    <add name="DefaultConnection" connectionString="Data Source=13.91.42.71;Initial Catalog=SwiftKareDB;User Id=sa;Password=Abc@123;persist security info=False;" providerName="System.Data.SqlClient" />
+    <add name="SwiftKareDBEntities" connectionString="metadata=res://*/SwiftKareDBModel.csdl|res://*/SwiftKareDBModel.ssdl|res://*/SwiftKareDBModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;Data Source=13.91.42.71;Initial Catalog=SwiftKareDB;User Id=sa;Password=Abc@123;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
 
   </connectionStrings>
   <appSettings>
@@ -42,8 +42,8 @@
 
     <add key="AppName" value="SwiftKare App" />
 
-    <add key="TokBoxApiKey" value="45742712" />
-    <add key="TokBoxSecretKey" value="f5d934357d713683684177a352bc29356cebf992" />
+    <add key="TokBoxApiKey" value="45760272" />
+    <add key="TokBoxSecretKey" value="fc31ef6faef18ac3b8df3fb9710aab151a78a99d" />
 
     <add key="StripePayPublisherKey" value="pk_test_3pJs94Zr9ctReML0Jyzcxlst" />
     <add key="StripePaySecretKey" value="sk_test_3rfO7X7ODbx5WxNj4LtTkbFG" />
